update paths images2

--- a/projects/2018cyberfruits.html
+++ b/projects/2018cyberfruits.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2018 cyberfruits/wide.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2018cyberfruits/wide.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -86,9 +86,9 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2018 cyberfruits/mango1.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2018 cyberfruits/mango2.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2018 cyberfruits/mango3.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2018cyberfruits/mango1.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2018cyberfruits/mango2.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2018cyberfruits/mango3.png" loading="lazy" alt="Project Image">
       <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Projection mapping with Latex liquid</p>
     </div>
     <div class="projdetail-images">
@@ -96,13 +96,13 @@
       <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Projection mapping with Latex liquid</p>
   </div>
   <div class="projdetail-images">
-    <img src="../images/projects/2018 cyberfruits/web.gif" loading="lazy" alt="Project Image">
+    <img src="../images/projects/2018cyberfruits/web.gif" loading="lazy" alt="Project Image">
     <p>A website that randomly generates mango t-shirts</p>
   </div>
   <div class="projdetail-images">
-    <img src="../images/projects/2018 cyberfruits/text1.png" loading="lazy" alt="Project Image">
-    <img src="../images/projects/2018 cyberfruits/text2.png" loading="lazy" alt="Project Image">
-    <img src="../images/projects/2018 cyberfruits/text3.png" loading="lazy" alt="Project Image">
+    <img src="../images/projects/2018cyberfruits/text1.png" loading="lazy" alt="Project Image">
+    <img src="../images/projects/2018cyberfruits/text2.png" loading="lazy" alt="Project Image">
+    <img src="../images/projects/2018cyberfruits/text3.png" loading="lazy" alt="Project Image">
     <p>Documentation on cyber fruit replacing real mangoes</p>
   </div>
   </section>
