--- a/projects/2019touchme.html
+++ b/projects/2019touchme.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2019 touchme/wide.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2019touchme/wide.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -80,9 +80,9 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2019 touchme/touchme1.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2019 touchme/touchme2.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2019 touchme/touchme3.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2019touchme/touchme1.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2019touchme/touchme2.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2019touchme/touchme3.png" loading="lazy" alt="Project Image">
       <p>Touch Me, 2019, Still Images</p>
     </div>
     <div class="projdetail-images">
