--- a/projects/2020automaticworld.html
+++ b/projects/2020automaticworld.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2020 automaticworld/wide.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2020automaticworld/wide.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -81,10 +81,10 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2020 automaticworld/automaticWorld4.png" loading="lazy" alt="Dummy Image">
-      <img src="../images/projects/2020 automaticworld/automaticWorld1.png" loading="lazy" alt="Dummy Image">
-      <img src="../images/projects/2020 automaticworld/automaticWorld2.png" loading="lazy" alt="Dummy Image">
-      <img src="../images/projects/2020 automaticworld/automaticWorld3.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2020automaticworld/automaticWorld4.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2020automaticworld/automaticWorld1.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2020automaticworld/automaticWorld2.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2020automaticworld/automaticWorld3.png" loading="lazy" alt="Dummy Image">
       <p>Automatic World, 2020, Still Images</p>
     </div>
     <div class="projdetail-images">
