--- a/projects/20240restaurant-appetizer.html
+++ b/projects/20240restaurant-appetizer.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2024 0restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/20240restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -90,7 +90,7 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/appetizer.jpg" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/appetizer.jpg" loading="lazy" alt="Project Image">
       <p>Appetizer-Lemon, 2024, Still Image</p>
     </div>
     <div class="projdetail-images">
@@ -102,7 +102,7 @@
         <p>0Restaurant Interview video</p>
     </div>
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/lemon-wip.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/lemon-wip.png" loading="lazy" alt="Project Image">
       <p>WIP : a lemon mukbang and the assembly process of a transparent display</p>
     </div>
   </section>
