--- a/projects/20240restaurant-main.html
+++ b/projects/20240restaurant-main.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2024 0restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/20240restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -86,13 +86,13 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/main1.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main2.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main3.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main4.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main5.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main6.png" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/main7.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main1.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main2.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main3.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main4.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main5.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main6.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main7.png" loading="lazy" alt="Project Image">
       <p>Main-Virtual Dining, 2024, Still Images</p>
     </div>
     <div class="projdetail-images">
@@ -104,7 +104,7 @@
         <p>0Restaurant Interview video</p>
     </div>
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/main-wip.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/main-wip.png" loading="lazy" alt="Project Image">
       <p>WIP : Lidar Sensor Touchscreen Development Environment TouchDesigner</p>
     </div>
   </section>
