--- a/projects/2024ecosynthesis.html
+++ b/projects/2024ecosynthesis.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2024 ecosynthesis/main.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2024ecosynthesis/main.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
