--- a/projects/2024seoulstation.html
+++ b/projects/2024seoulstation.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2024 seoulstation/2024seoulstation-subm.jpg" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/2024seoulstation/2024seoulstation-subm.jpg" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -89,20 +89,20 @@
         <p>ⓒ Art Korea Lab. All rights reserved.</p>
     </div>
     <div class="projdetail-images">
-      <img src="../images/projects/2024 seoulstation/2024seoulstation-storyboard.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/2024seoulstation/2024seoulstation-storyboard.png" loading="lazy" alt="Project Image">
       <p>Seoul 2050: Climate Control System project storyboard</p>
     </div>
     <div class="projdetail-images">
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-wave.gif" loading="lazy" alt="Project Image">
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-glitch.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-wave.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-glitch.gif" loading="lazy" alt="Project Image">
         <p>Building Wind, 2024 - The visual was created by DOIDOI.</p>
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-break.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-break.gif" loading="lazy" alt="Project Image">
         <p>Smog, 2024 - The visual was created by DOIDOI.</p>
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-water.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-water.gif" loading="lazy" alt="Project Image">
         <p>Rising Sea Level, 2024 - The visual was created by DOIDOI.</p>
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-star.gif" loading="lazy" alt="Project Image">
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-crash.gif" loading="lazy" alt="Project Image">
-        <img src="../images/projects/2024 seoulstation/2024seoulstation-flower.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-star.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-crash.gif" loading="lazy" alt="Project Image">
+        <img src="../images/projects/2024seoulstation/2024seoulstation-flower.gif" loading="lazy" alt="Project Image">
         <p>Greening, 2024 - The visual was created by DOIDOI.</p>
       </div>
   </section>
