--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <link rel="icon" href="images/favicon/favicon48.png" sizes="48x48">
   
     <!-- Masonry.js CDN 추가 -->
-    <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" defer></script>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js" defer></script>
+    <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   </head>  
   
 <body>
