--- a/projects/20240restaurant-dessert.html
+++ b/projects/20240restaurant-dessert.html
@@ -51,7 +51,7 @@
 <section class="project-details">
     <!-- 공통적인 부분 -->
     <div class="projdetail-main-image">
-      <img src="../images/projects/2024 0restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
+      <img src="../images/projects/20240restaurant/wide-poster.png" loading="lazy" alt="Dummy Image">
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
@@ -86,8 +86,8 @@
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/dessert.jpg" loading="lazy" alt="Project Image">
-      <img src="../images/projects/2024 0restaurant/dessert1.jpg" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/dessert.jpg" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/dessert1.jpg" loading="lazy" alt="Project Image">
       <p>Dessert-Game Food, 2024, Still Images</p>
     </div>
     <div class="projdetail-images">
@@ -99,7 +99,7 @@
         <p>0Restaurant Interview video</p>
     </div>
     <div class="projdetail-images">
-      <img src="../images/projects/2024 0restaurant/dessert-wip.png" loading="lazy" alt="Project Image">
+      <img src="../images/projects/20240restaurant/dessert-wip.png" loading="lazy" alt="Project Image">
       <p>WIP : LED screen R&D</p>
     </div>
   </section>
