--- a/projects/2018cyberfruits.html
+++ b/projects/2018cyberfruits.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Cyber-Fruits(ver.01_MANGOMANGO)</p>
+        <p id="projdetail-type">Installation</p>
         <p id="projdetail-sub">
           2018, Projection mapping with Latex liquid<br><br>
           in Stuttgart, Germany<br>
