--- a/projects/2019touchme.html
+++ b/projects/2019touchme.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Touch Me</p>
+        <p id="projdetail-type">Interactiev Art</p>
         <p id="projdetail-sub">
           2019, Leapmotion Hand tracking interactive art<br><br>
           in Seoul<br>
