--- a/projects/2020automaticworld.html
+++ b/projects/2020automaticworld.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Automatic World</p>
+        <p id="projdetail-type">vr</p>
         <p id="projdetail-sub">
           2020, Oculus VR [Color Sound], 3D Graphics<br><br>
           in Art center Nabi, Seoul<br>
