--- a/projects/20240restaurant-main.html
+++ b/projects/20240restaurant-main.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Main-Virtual Dining</p>
+        <p id="projdetail-type">Interactive Art</p>
         <p id="projdetail-sub">
           2024, Projection Mapping on Interactive Table with Lidar Sensor, 1200*600<br><br>
           in Leon Gallery, Seoul<br>
