--- a/projects/2024ecosynthesis.html
+++ b/projects/2024ecosynthesis.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">EcoSynthesis</p>
+        <p id="projdetail-type">3D Graphic</p>
         <p id="projdetail-sub">
           2024, Single Channel Video, Sound, 0:49<br><br>
           in Woori Bank Building, Seoul Station, Seoul<br>
