--- a/projects/2024seoulstation.html
+++ b/projects/2024seoulstation.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Seoul2050:Climate Control System</p>
+        <p id="projdetail-type">Media Facade</p>
         <p id="projdetail-sub">
           2024, single-channel video, color, sound, 9 minutes<br><br>
           in Culture Station Seoul 284<br>
