--- a/projects/20240restaurant-appetizer.html
+++ b/projects/20240restaurant-appetizer.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Appetizer-Lemon</p>
+        <p id="projdetail-type">Installation</p>
         <p id="projdetail-sub">
           2024, Transparent LED screen, 500*1000<br><br>
           in Leon Gallery, Seoul<br>
