--- a/projects/20240restaurant-dessert.html
+++ b/projects/20240restaurant-dessert.html
@@ -55,8 +55,8 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title"></p>
-        <p id="projdetail-type"></p>
+        <p id="projdetail-title">Dessert-Game Food</p>
+        <p id="projdetail-type">Interactiev Art</p>
         <p id="projdetail-sub">
           2024, Screen with LED Strip and Camera, 1300x2000mm<br><br>
           in Leon Gallery, Seoul<br>
