--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
+
+        <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="DOIDOI" />
+    <meta property="og:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
+    <meta property="og:image" content="https://drive.google.com/uc?id=1rzGN0vrJQv9WxjC67v8lbXzIvQDtZMB3
+    " />
+    <!-- <meta property="og:url" content="https://yourwebsite.com" /> -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+
     <title>DOIDOI</title>
   
     <!-- Pretendard 웹폰트 preload 및 font-display: swap 속성 적용 -->
@@ -52,11 +62,11 @@
       <div class="info-container">
         <div class="info-section" id="about">
           <h2>About</h2>
-          <p><strong>DOIDOI</strong> is a Seoul-based media artist 
-            exploring unusual sensations found in everyday life and working on defining 
-            the blurry line between the virtual and real worlds. By taking different sensory 
-            elements and transforming them into interactive content 
-            in virtual environments, they expand the way we experience our senses.
+          <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring unusual 
+            sensations in everyday life. She focuses on defining the blurry 
+            line between the virtual and real worlds. 
+            By transforming sensory elements into interactive content, 
+            she expands how we experience our senses in virtual environments.
             <br><br>
             With a background in visual communication design and interaction development, 
             she operates <strong>DOIDOI Studio</strong>, 
