--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- Masonry.js CDN 추가 -->
     <script src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <base href="/DOIDOI/">
   </head>  
   
 <body>
