--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
         <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="DOIDOI" />
     <meta property="og:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
-    <meta property="og:image" content="https://drive.google.com/uc?id=1rzGN0vrJQv9WxjC67v8lbXzIvQDtZMB3
-    " />
-    <!-- <meta property="og:url" content="https://yourwebsite.com" /> -->
+    <meta property="og:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="en_US" />
 
     <title>DOIDOI</title>
   
