--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000">
 
     <!-- Open Graph Meta Tags for better social media sharing -->
-    <meta property="og:title" content="DOIDOI | Seoul-based Media Artist's Work" />
+    <meta property="og:title" content="DOIDOI | Media Artist" />
     <meta property="og:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
     <meta property="og:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags for Twitter preview -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DOIDOI | Seoul-based Media Artist's Work" />
+    <meta name="twitter:title" content="DOIDOI | Media Artist" />
     <meta name="twitter:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
     <meta name="twitter:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
 
