--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 
     <!-- Open Graph Meta Tags for better social media sharing -->
     <meta property="og:title" content="DOIDOI | Media Artist" />
-    <meta property="og:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
     <meta property="og:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags for Twitter preview -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DOIDOI | Media Artist" />
-    <meta name="twitter:description" content="DOIDOI is a Seoul-based media artist exploring unusual sensations in everyday life." />
     <meta name="twitter:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
 
     <!-- Meta description to summarize the website's content (important for SEO) -->
@@ -81,12 +79,12 @@
     <section class="info">
       <div class="info-container">
         <div class="info-section" id="about">
-          <h2>About</h2>
+          <h2>about</h2>
           <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring unusual 
             sensations in everyday life. She focuses on defining the blurry 
             line between the virtual and real worlds. 
             By transforming sensory elements into interactive content, 
-            she expands how we experience our senses in virtual environments.
+            she expands the way we experience our senses.
             <br><br>
             With a background in visual communication design and interaction development, 
             she operates <strong>DOIDOI Studio</strong>, 
@@ -98,12 +96,15 @@
           <p>Open to collaboration and inquiries. <br>Reach out with your ideas.</p>
           <br>
           <p><a href="mailto:doheee0404@gmail.com">email↗</a></p>
-          <p><a href="https://www.instagram.com/d0idoi/">Instagram↗</a></p></div>
+          <p><a href="https://www.instagram.com/d0idoi/">instagram↗</a></p></div>
         <div class="info-section" id="info">
           <h2>Info</h2>
-          <p><strong>DOIDOI</strong> explores phenomenology, cognitive science, molecular gastronomy, and gastrophysics to expand her understanding of the world.</p>
-          <br>
-          <p>She specializes in interactive projects with Unreal Engine and TouchDesigner, sharing her research on her <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. Her past work includes motion-based technologies like Kinect, LeapMotion, and MediaPipe, and more recently, interactive touchscreen projects with LiDAR sensors.</p>
+          <p><strong>DOIDOI</strong> values the simple pleasures of life, enjoying hobbies such as cooking, fitness, and traveling.
+          <br><br>
+          She specializes in interactive projects using Unreal Engine and TouchDesigner and shares her research through her <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
+          <br><br>
+          Recently, she has interested in cognitive science, gastrophysics, and molecular gastronomy.
+        </p>
         </div>
         </div>
       </div>
