--- a/projects/2019touchme.html
+++ b/projects/2019touchme.html
@@ -58,16 +58,15 @@
         <p id="projdetail-title">Touch Me</p>
         <p id="projdetail-type">Interactiev Art</p>
         <p id="projdetail-sub">
-          2019, Leapmotion Hand tracking interactive art<br><br>
+          2019, Leapmotion Hand tracking interactive art<br>
           in Seoul<br>
         </p>
       </div>
       <div class="projdetail-description">
         <!-- Description을 두 열로 나누기 위한 두 개의 p 태그 추가 -->
-        <p>
-          Humans are, by nature, solitary beings. As technology advances, can we alleviate this inherent loneliness through interactions with virtual beings? Touch Me uses Leap Motion hand-tracking technology to extend the viewer’s physical presence into a virtual space, enabling a tactile experience with a virtual creature.
-          <br><br>
-          This work redefines the interaction between human and digital as a tactile experience, blurring the boundaries between virtual and real. Viewers experience a sense of disorientation as their presence extends into the virtual world, encountering cognitive dissonance in the process. Touch Me revisits the increasingly complex issues of sensation and existence as technology evolves, exploring how experiences within the virtual realm affect our perception and emotions.
+        <p> Humans are inherently solitary beings, but as technology progresses, can we ease this intrinsic loneliness through interactions with virtual entities? Touch Me utilizes Leap Motion hand-tracking technology to extend the viewer’s physical presence into a virtual space, creating a tactile connection with a virtual creature. 
+          <br><br> 
+          This piece redefines the relationship between humans and the digital realm, offering a tactile experience that blurs the lines between the virtual and the real. As viewers presence merges with the virtual world, they encounter a sense of disorientation and cognitive dissonance. Touch Me addresses the evolving complexities of sensation and existence, exploring how virtual experiences influence our perception and emotional responses. 
         </p>
         <p class="projdetail-description-kr">
           인간은 본질적으로 고독한 존재이다. 기술이 발전하면서 우리는 가상의 존재와의 교감을 통해 이러한 외로움을 해소할 수 있을까? Touch Me는 Leap Motion 핸드 트래킹 기술을 이용해 관객의 신체를 가상 공간으로 확장시켜, 가상 생명체와의 물리적 접촉을 경험하게 한다.
