--- a/projects/20240restaurant-appetizer.html
+++ b/projects/20240restaurant-appetizer.html
@@ -60,7 +60,7 @@
         <p id="projdetail-sub">
           2024, Transparent LED screen, 500*1000<br><br>
           in Leon Gallery, Seoul<br>
-          from November 28, 2024 to December 02, 2024.
+          from November 28, 2024, to December 2, 2024
         </p>
       </div>
       <div class="projdetail-description">
