--- a/projects/20240restaurant-dessert.html
+++ b/projects/20240restaurant-dessert.html
@@ -56,11 +56,11 @@
     <div class="projdetail-content">
       <div class="projdetail-title">
         <p id="projdetail-title">Dessert-Game Food</p>
-        <p id="projdetail-type">Interactiev Art</p>
+        <p id="projdetail-type">Interactive Art</p>
         <p id="projdetail-sub">
-          2024, Screen with LED Strip and Camera, 1300x2000mm<br><br>
+          2024, Screen with LED Strip and Camera, 1300*2000mm<br><br>
           in Leon Gallery, Seoul<br>
-          from November 28, 2024 to December 02, 2024.
+          from November 28, 2024, to December 2, 2024
         </p>
       </div>
       <div class="projdetail-description">
