--- a/projects/20240restaurant-main.html
+++ b/projects/20240restaurant-main.html
@@ -60,7 +60,7 @@
         <p id="projdetail-sub">
           2024, Projection Mapping on Interactive Table with Lidar Sensor, 1200*600<br><br>
           in Leon Gallery, Seoul<br>
-          from November 28, 2024 to December 02, 2024.
+          from November 28, 2024, to December 2, 2024
         </p>
       </div>
       <div class="projdetail-description">
@@ -70,7 +70,7 @@
           <br><br>
           This exhibition highlights that gastronomy is more than just the act of consuming nutrients—it holds cultural and sensory significance. Audiences are invited to experience how their perception of taste and sensory awareness can expand through each course of the artwork, offering a fresh perspective on the essence of gastronomy through the lens of digital innovation and artistic imagination.
           <br><br>
-          <strong>[Main-Virtual Dining]</strong><br>  
+          <strong>[Main-Virtual Dining]</strong><br>
           Main is the second artwork of the 0 Restaurant exhibition, where an interactive table combining lidar sensors and projection mapping offers the audience a virtual fine dining experience. Each course is designed to be activated by the viewer, providing a sensory journey through visual and auditory elements. These calorie-free sensory elements evoke an endless and diverse range of taste imaginings, and the process of observing, understanding, and enjoying the unfamiliar leads to a journey of exploring the essence of gastronomy. This work proposes a new gastronomic experience that is not limited by physicality and offers an opportunity to reflect on the essence of fine dining.
         </p>
         <p class="projdetail-description-kr">
