--- a/projects/2024seoulstation.html
+++ b/projects/2024seoulstation.html
@@ -55,23 +55,25 @@
     </div>
     <div class="projdetail-content">
       <div class="projdetail-title">
-        <p id="projdetail-title">Seoul2050:Climate Control System</p>
+        <p id="projdetail-title">Seoul2050: Climate Control System</p>
         <p id="projdetail-type">Media Facade</p>
         <p id="projdetail-sub">
-          2024, single-channel video, color, sound, 9 minutes<br><br>
+          2024, Single-channel video, color, sound, 9 minutes<br><br>
           in Culture Station Seoul 284<br>
-          from December 10, 2024 to December 15, 2024.
+          from December 10, 2024, to December 15, 2024
         </p>
       </div>
       <div class="projdetail-description">
         <!-- Description을 두 열로 나누기 위한 두 개의 p 태그 추가 -->
-        <p>SIDOI, composed of Kim Wonjong and Jeon Dohee, explores environmental issues arising at the boundaries of the city through audiovisual language.
+        <p>
+          SIDOI, composed of Kim Wonjong and Jeon Dohee, explores environmental issues arising at the boundaries of the city through audiovisual language.
           <br><br>
-          They vividly present the climate disasters that future cities will face and, in <Seoul 2050: Climate Control System>, they imagine and depict the city of Seoul in 2050. Drawing on Seoul Station, a symbol of urbanization and a transportation hub, they create an extreme climate crisis scenario, inviting the audience into the future.
+          They vividly present the climate disasters that future cities will face and, in Seoul2050: Climate Control System, imagine and depict the city of Seoul in 2050. Drawing on Seoul Station, a symbol of urbanization and a transportation hub, they create an extreme climate crisis scenario, inviting the audience into the future.
           <br><br>
-          Through the artwork, SIDOI imprints the unsettling reality that may come as a result of past choices. The intensifying heat in the vast screen, the unpredictable weather changes, the chaotic air currents caused by the building winds, and the collapsing ecosystem are already a part of our reality.
+          Through the artwork, SIDOI imprints the unsettling reality that may come as a result of past choices. The intensifying heat in the vast screen, the unpredictable weather changes, the chaotic air currents caused by building winds, and the collapsing ecosystem are already a part of our reality.
           <br><br>
-          <Seoul 2050: Climate Control System> challenges the audience with the question, "What kind of future are we creating?" It prompts reflection on the dual nature of climate change and technological advancements. As the climate control system operates, it urges us to realize that we are the agents of the future and to contemplate a sustainable future together.</p>
+          Seoul2050: Climate Control System challenges the audience with the question, "What kind of future are we creating?" It prompts reflection on the dual nature of climate change and technological advancements. As the climate control system operates, it urges us to realize that we are the agents of the future and to contemplate a sustainable future together.
+        </p>
         <p class="projdetail-description-kr">SIDOI는 김원종과 전도희 2인으로 구성되어 도시의 경계에서 발생하는 환경 문제를 시청각적 언어로 탐구한다.
           <br><br>
           이들은 미래 도시가 맞이할 기후 재난을 생동감 있게 펼쳐 보이며 서울2050: 기후제어시스템>에서 2050년 서울의 모습'을 상상하고 그려낸다. 도시화의 상징이자 교통의 중심인 서울역에서 극단적인 기후 위기 시나리오를 그리며 관람객을 미래로 초대한다.
