--- a/projects/2018cyberfruits.html
+++ b/projects/2018cyberfruits.html
@@ -49,51 +49,51 @@
     
 <!-- Project Section with Dummy Image -->
 <section class="project-details">
-    <!-- 공통적인 부분 -->
-    <div class="projdetail-main-image">
-      <img src="../images/projects/2018cyberfruits/wide.png" loading="lazy" alt="Dummy Image">
+  <!-- 공통적인 부분 -->
+  <div class="projdetail-main-image">
+    <img src="../images/projects/2018cyberfruits/wide.png" loading="lazy" alt="Dummy Image">
+  </div>
+  <div class="projdetail-content">
+    <div class="projdetail-title">
+      <p id="projdetail-title">Cyber-Fruits<br>ver.01_MANGOMANGO</p>
+      <p id="projdetail-type">Installation</p>
+      <p id="projdetail-sub">
+        2018, Projection mapping with Latex liquid<br>
+        in Stuttgart, Germany<br>
+      </p>
     </div>
-    <div class="projdetail-content">
-      <div class="projdetail-title">
-        <p id="projdetail-title">Cyber-Fruits(ver.01_MANGOMANGO)</p>
-        <p id="projdetail-type">Installation</p>
-        <p id="projdetail-sub">
-          2018, Projection mapping with Latex liquid<br><br>
-          in Stuttgart, Germany<br>
-        </p>
-      </div>
-      <div class="projdetail-description">
-        <!-- Description을 두 열로 나누기 위한 두 개의 p 태그 추가 -->
-        <p>
-          How can we distinguish between the ”real“ and the ”fake“? How different are we from others, and yet, how similar? Perhaps we are beings constantly imitating each other, endlessly replicating ourselves. This piece explores the boundary between the real and the fake.
-          <br><br>
-          In the installation, the transformation of a mango into something ”real“ is projected onto what appears to be human skin. However, this skin is actually latex liquid, not real human flesh. If viewers perceive it as real human skin, in that moment, it becomes real. This transformation process repeats infinitely.
-          <br><br>
-          The distinction between real and fake is ultimately a matter of instantaneous perception; even what seems real can turn out to be fake. Did ”real“ ever truly exist? We cannot define ourselves as purely real or fake; we are simply part of an ongoing process of constant change.
-          <br><br>
-          <a href="https://o986o.github.io/fashiondesigner/"><strong>website↗</strong></a>
-        </p>
-        <p class="projdetail-description-kr">
-          ’진짜‘와 ’가짜‘는 어떻게 구분될 수 있을까? 우리는 타인과 어떻게 다르고, 얼마나 닮아 있을까? 사실, 우리는 서로를 모방하며 끊임없이 복제되는 존재일지도 모른다. 이 작품은 진짜와 가짜의 경계를 탐구한다.
-          <br><br>
-          설치물에서는 망고가 진짜로 변하는 과정이 인간의 피부 위에 투사된다. 그러나 그 피부는 실제가 아닌 라텍스 리퀴드다. 관객이 이를 진짜 인간의 피부라고 인식한다면, 그 순간 그것은 진짜가 된다. 이러한 변환 과정은 무한히 반복된다.
-          <br><br>
-          진짜와 가짜의 구분은 결국 순간적인 판단에 지나지 않으며, 진짜라 여겨지던 것조차 가짜가 될 수 있다. 과연 진짜가 존재했을까? 우리는 자신을 진짜 혹은 가짜라고 정의할 수 없으며, 그저 끊임없이 변화하는 과정의 일부일 뿐이다. 
-        </p>
-      </div>
-      <div class="projdetail-skill"></div>
-    </div>      
+    <div class="projdetail-description">
+      <!-- Description을 두 열로 나누기 위한 두 개의 p 태그 추가 -->
+      <p>
+        How can we distinguish between the 'real' and the 'fake'? How different are we from others, and yet, how similar? Perhaps we are beings constantly imitating each other, endlessly replicating ourselves. This piece explores the boundary between the real and the fake.
+        <br><br>
+        In the installation, the transformation of a mango into something 'real' is projected onto what appears to be human skin. However, this skin is actually latex liquid, not real human flesh. If viewers perceive it as real human skin, in that moment, it becomes real. This transformation process repeats infinitely.
+        <br><br>
+        The distinction between real and fake is ultimately a matter of instantaneous perception, even what seems real can turn out to be fake. Did 'real' ever truly exist? We cannot define ourselves as purely real or fake, we are simply part of an ongoing process of constant change.
+        <br><br>
+        <a href="https://o986o.github.io/fashiondesigner/"><strong>website↗</strong></a>
+      </p>
+      <p class="projdetail-description-kr">
+        '진짜'와 '가짜'는 어떻게 구분될 수 있을까? 우리는 타인과 어떻게 다르고, 얼마나 닮아 있을까? 사실, 우리는 서로를 모방하며 끊임없이 복제되는 존재일지도 모른다. 이 작품은 진짜와 가짜의 경계를 탐구한다.
+        <br><br>
+        설치물에서는 망고가 진짜로 변하는 과정이 인간의 피부 위에 투사된다. 그러나 그 피부는 실제가 아닌 라텍스 리퀴드다. 관객이 이를 진짜 인간의 피부라고 인식한다면, 그 순간 그것은 진짜가 된다. 이러한 변환 과정은 무한히 반복된다.
+        <br><br>
+        진짜와 가짜의 구분은 결국 순간적인 판단에 지나지 않으며, 진짜라 여겨지던 것조차 가짜가 될 수 있다. 과연 진짜가 존재했을까? 우리는 자신을 진짜 혹은 가짜라고 정의할 수 없으며, 그저 끊임없이 변화하는 과정의 일부일 뿐이다.  
+      </p>
+    </div>
+    <div class="projdetail-skill"></div>
+  </div>
   
     <!-- 프로젝트 관련 이미지 및 영상 추가 설명 -->
     <div class="projdetail-images">
       <img src="../images/projects/2018cyberfruits/mango1.png" loading="lazy" alt="Project Image">
       <img src="../images/projects/2018cyberfruits/mango2.png" loading="lazy" alt="Project Image">
       <img src="../images/projects/2018cyberfruits/mango3.png" loading="lazy" alt="Project Image">
-      <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Projection mapping with Latex liquid</p>
+      <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Still Images</p>
     </div>
     <div class="projdetail-images">
       <iframe title="vimeo-player" src="https://player.vimeo.com/video/270648893?h=f65fa5cb23" frameborder="0"    allowfullscreen></iframe>
-      <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Projection mapping with Latex liquid</p>
+      <p>Cyber-Fruits(ver.01_MANGOMANGO), 2018, Exhibition Video</p>
   </div>
   <div class="projdetail-images">
     <img src="../images/projects/2018cyberfruits/web.gif" loading="lazy" alt="Project Image">
@@ -103,7 +103,7 @@
     <img src="../images/projects/2018cyberfruits/text1.png" loading="lazy" alt="Project Image">
     <img src="../images/projects/2018cyberfruits/text2.png" loading="lazy" alt="Project Image">
     <img src="../images/projects/2018cyberfruits/text3.png" loading="lazy" alt="Project Image">
-    <p>Documentation on cyber fruit replacing real mangoes</p>
+    <p>Documentation on cyber fruit replacing real mango</p>
   </div>
   </section>
   
