--- a/index.html
+++ b/index.html
@@ -80,30 +80,30 @@
       <div class="info-container">
         <div class="info-section" id="about">
           <h2>about</h2>
-          <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring unusual 
-            sensations in everyday life. She focuses on defining the blurry 
-            line between the virtual and real worlds. 
-            By transforming sensory elements into interactive content, 
-            she expands the way we experience our senses.
+          <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring 
+            unusual sensations in everyday life. DOIDOI focuses on defining 
+            the blurry line between the virtual and real worlds. 
+            Through the work, DOIDOI aims to expand the way we experience our senses.
             <br><br>
             With a background in visual communication design and interaction development, 
-            she operates <strong>DOIDOI Studio</strong>, 
+            DOIDOI operates <strong>DOIDOI Studio</strong>, 
             blending technology and art to evoke emotional impact and pursue a deeper understanding of human nature.</p>
             
         </div>
         <div class="info-section" id="contact">
           <h2>Contact</h2>
-          <p>Open to collaboration and inquiries. <br>Reach out with your ideas.</p>
+          <p>Open to collaboration and inquiries. <br>
+            Feel free to reach out with your ideas.</p>
           <br>
           <p><a href="mailto:doheee0404@gmail.com">email↗</a></p>
           <p><a href="https://www.instagram.com/d0idoi/">instagram↗</a></p></div>
         <div class="info-section" id="info">
           <h2>Info</h2>
-          <p><strong>DOIDOI</strong> values the simple pleasures of life, enjoying hobbies such as cooking, fitness, and traveling.
+          <p><strong>DOIDOI</strong> values life's simple pleasures, enjoying cooking, fitness, and traveling.
           <br><br>
-          She specializes in interactive projects using Unreal Engine and TouchDesigner and shares her research through her <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
+          DOIDOI specializes in interactive projects using Unreal Engine and TouchDesigner, sharing research through a <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
           <br><br>
-          Recently, she has interested in cognitive science, gastrophysics, and molecular gastronomy.
+          Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and molecular gastronomy.
         </p>
         </div>
         </div>
