--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
     <!-- Open Graph Meta Tags for better social media sharing -->
     <meta property="og:title" content="DOIDOI | Media Artist" />
+    <meta property="og:description" content="between the virtual and real worlds" />
     <meta property="og:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags for Twitter preview -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="DOIDOI | Media Artist" />
+    <meta name="twitter:description" content="between the virtual and real worlds" />
     <meta name="twitter:image" content="https://github.com/o986o/DOIDOI/blob/master/images/logo-link.png?raw=true" />
 
     <!-- Meta description to summarize the website's content (important for SEO) -->
