--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         <div class="info-section" id="info">
           <h2>Info</h2>
           <p><strong>DOIDOI</strong> values life's simple pleasures, enjoying cooking, fitness, and traveling.
-          <br><br>
-          DOIDOI specializes in interactive projects using Unreal Engine and TouchDesigner, sharing research through a <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
+          Specializing in interactive projects using Unreal Engine and TouchDesigner, sharing research through a <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
           <br><br>
           Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and molecular gastronomy.
         </p>
