--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="info-section" id="about">
           <h2>about</h2>
           <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring 
-            unusual sensations in everyday life. DOIDOI focuses on defining 
-            the blurry line between the virtual and real worlds. 
+            unusual elements found in everyday life into visual experiences 
+            that expand perception and stimulate the senses.
             Through the work, DOIDOI aims to expand the way we experience our senses.
             <br><br>
             With a background in visual communication design and interaction development, 
@@ -106,7 +106,7 @@
           <p><strong>DOIDOI</strong> values life's simple pleasures, enjoying cooking, fitness, and traveling.
           Specializing in interactive projects using Unreal Engine and TouchDesigner, sharing research through a <a href="https://computer-art.tistory.com/"><strong>blog↗</strong></a>. 
           <br><br>
-          Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and molecular gastronomy.
+          Recently, DOIDOI has developed an interest in cognitive science, gastrophysics, and SF.
         </p>
         </div>
         </div>
