--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@
       <div class="info-container">
         <div class="info-section" id="about">
           <h2>about</h2>
-          <p><strong>DOIDOI</strong> is a Seoul-based media artist exploring 
-            unusual elements found in everyday life into visual experiences 
-            that expand perception and stimulate the senses.
-            Through the work, DOIDOI aims to expand the way we experience our senses.
+          <p><strong>DOIDOI</strong>  is a Seoul-based media artist who transforms 
+          unusual elements found in everyday life into visual experiences that stimulate 
+          perception and expand the senses. Through this work, DOIDOI aims to 
+          open new ways of experiencing our senses.
             <br><br>
             With a background in visual communication design and interaction development, 
             DOIDOI operates <strong>DOIDOI Studio</strong>, 
-            blending technology and art to evoke emotional impact and pursue a deeper understanding of human nature.</p>
+            blending technology and art to evoke emotional impact 
+            and pursue a deeper understanding of perception and the senses. 
+          </p>
             
         </div>
         <div class="info-section" id="contact">
